# ensembles_and_web_server

./: .env  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  ui.py
ensembles/: __init__.py  boosting.py  random_forest.py  utils.py
ensembles/backend/: app.py  schemas.py
ensembles/frontend/: client.py  utils.py
scripts/: launch_backend.sh  launch_streamlit.sh
